--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,13 @@
       "Rootshell\\Cvss\\Test\\": "tests/"
     }
   },
+  "scripts": {
+    "phpunit": "phpunit --verbose --colors=always",
+    "phpunit-coverage": "phpunit --verbose --colors=always --coverage-html build/coverage",
+    "test": [
+        "@phpunit"
+    ]
+  },
   "support": {
     "issues": "https://github.com/Rootshell-Security/cvss-calculator/issues",
     "source": "https://github.com/Rootshell-Security/cvss-calculator/uuid"
