--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -40,5 +40,5 @@ jobs:
       uses: coverallsapp/github-action@v1.1.2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: './build/coverage/lcov.xml'
+        path-to-lcov: './build/coverage/lcov.info'
         
