--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -34,11 +34,8 @@ jobs:
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
     - name: Run test suite
-      run: vendor/bin/phpunit --coverage-clover build/coverage/lcov.info
+      run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
     
     - name: Coveralls GitHub Action
-      uses: coverallsapp/github-action@v1.1.2
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: './build/coverage/lcov.info'
+      run: vendor/bin/php-coveralls -v
         
