--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     "ext-json": "*"
   },
   "require-dev": {
+    "infection/infection": "^0.17.3",
+    "php-coveralls/php-coveralls": "^2.2",
     "phpunit/phpunit": "^9"
   },
   "config": {
