--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,5 +37,5 @@ jobs:
       run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
     
     - name: Coveralls GitHub Action
-      run: vendor/bin/php-coveralls -v
+      run: export COVERALLS_RUN_LOCALLY=1 && export COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_TOKEN }} && vendor/bin/php-coveralls -v
         
