--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,6 +35,9 @@ jobs:
 
     - name: Run test suite
       run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+    - name: Run Static Analysis
+      run: vendor/bin/psalm
     
     - name: Coveralls GitHub Action
       run: export COVERALLS_RUN_LOCALLY=1 && export COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_TOKEN }} && vendor/bin/php-coveralls -v
