--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,12 @@
     }
   },
   "scripts": {
+    "psalm": "psalm --show-info=false",
     "phpunit": "phpunit --verbose --colors=always",
     "phpunit-coverage": "phpunit --verbose --colors=always --coverage-html build/coverage",
     "test": [
-        "@phpunit"
+        "@phpunit",
+        "@psalm"
     ]
   },
   "support": {
