--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "ext-json": "*"
   },
   "require-dev": {
+    "infection/infection": "^0.25.2",
     "php-coveralls/php-coveralls": "^2.2",
     "phpunit/phpunit": "^9.3",
     "vimeo/psalm": "^4.10"
