--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,11 +8,21 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version:
+          - "7.4"
+          - "8.0"
+          - "8.1"
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-version }}
 
     - name: Validate composer.json and composer.lock
       run: composer validate
@@ -35,6 +45,9 @@ jobs:
 
     - name: Run test suite
       run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+    - name: Run Static Analysis
+      run: vendor/bin/psalm
     
     - name: Coveralls GitHub Action
       run: export COVERALLS_RUN_LOCALLY=1 && export COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_TOKEN }} && vendor/bin/php-coveralls -v
