--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" cacheResultFile="./build/cache/phpunit.result.cache" colors="true" verbose="true">
+    <logging>
+        <log type="coverage-php" target="build/cov/coverage.cov"/>
+    </logging>
     <coverage processUncoveredFiles="true">
         <include>
             <directory suffix=".php">./src</directory>
