--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "7.4"
           - "8.0"
           - "8.1"
+          - "8.2"
 
     steps:
     - uses: actions/checkout@v2
@@ -49,6 +49,8 @@ jobs:
     - name: Run Static Analysis
       run: vendor/bin/psalm
     
-    - name: Coveralls GitHub Action
-      run: export COVERALLS_RUN_LOCALLY=1 && export COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_TOKEN }} && vendor/bin/php-coveralls -v
+    - name: Coveralls GitHub
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: vendor/bin/php-coveralls -v
         
