--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,7 +44,7 @@ jobs:
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
     - name: Run test suite
-      run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+      run: vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml
 
     - name: Run Static Analysis
       run: vendor/bin/psalm
@@ -52,5 +52,5 @@ jobs:
     - name: Coveralls GitHub
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: vendor/bin/php-coveralls -v
+      run: vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml && vendor/bin/php-coveralls -v
         
