--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /composer.lock
 /vendor/
 /phpunit.xml
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
