--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "ext-json": "*"
   },
   "require-dev": {
+    "doctrine/coding-standard": "^12.0",
     "infection/infection": "^0.27.8",
     "php-coveralls/php-coveralls": "^2.7.0",
     "phpunit/phpunit": "^10.4.2",
@@ -22,7 +23,8 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-      "infection/extension-installer": true
+      "infection/extension-installer": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "autoload": {
@@ -37,11 +39,13 @@
   },
   "scripts": {
     "psalm": "psalm --show-info=false",
-    "phpunit": "phpunit --verbose --colors=always",
-    "phpunit-coverage": "phpunit --verbose --colors=always --coverage-html build/coverage",
+    "phpunit": "phpunit --colors=always",
+    "phpunit-coverage": "phpunit --colors=always --coverage-html build/coverage",
+    "phpcs": "phpcs",
     "test": [
         "@phpunit",
-        "@psalm"
+        "@psalm",
+        "@phpcs"
     ]
   },
   "support": {
