--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.1 || ^8.2 || ^8.3 || 8.4",
+    "php": "^8.2 || ^8.3 || 8.4",
     "ext-json": "*"
   },
   "require-dev": {
