Update dependencies to support PHP 8.4 (#16)
* Update dependencies to support PHP 8.4

Create additional baseline for psalm

* Remove PHP 8.1 support

* Remove PHP 8.1 from workflow

---------

Co-authored-by: Liam Hackett <liam.hackett@rootshellsecurity.net>

--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.1 || ^8.2 || ^8.3",
+    "php": "^8.2 || ^8.3 || 8.4",
     "ext-json": "*"
   },
   "require-dev": {
     "doctrine/coding-standard": "^12.0",
-    "infection/infection": "^0.27.8",
+    "infection/infection": "^0.29.10",
     "php-coveralls/php-coveralls": "^2.7.0",
-    "phpunit/phpunit": "^10.4.2",
-    "vimeo/psalm": "^5.16.0"
+    "phpunit/phpunit": "^10.5.42",
+    "vimeo/psalm": "^6.0.0"
   },
   "config": {
     "sort-packages": true,
